change files name

--- a/faq.html
+++ b/faq.html
@@ -130,7 +130,7 @@
         <p class="subtitle">Masukkan nomor resi untuk melacak status pengiriman paket Anda</p>
         
         <div class="nav">
-            <a href="tampilanahwal.html" class="nav-item">Beranda</a>
+            <a href="index.html" class="nav-item">Beranda</a>
             <a href="#" class="nav-item">Status</a>
             <a href="#" class="nav-item">Riwayat</a>
             <a href="#" class="nav-item">Kontak</a>
