--- a/kontak.html
+++ b/kontak.html
@@ -136,7 +136,7 @@
         </header>
 
         <div class="navbar">
-            <a href="tampilanawal.html">Beranda</a>
+            <a href="index.html">Beranda</a>
             <a href="statuspaket.html">Status</a>
             <a href="riwayat.html">Riwayat</a>
             <a href="kontak.html" class="active">Kontak</a>
