--- a/riwayat.html
+++ b/riwayat.html
@@ -139,7 +139,7 @@
         </header>
 
         <div class="navbar">
-            <a href="tampilanawal.html">Beranda</a>
+            <a href="index.html">Beranda</a>
             <a href="statuspaket.html">Status</a>
             <a href="riwayat.html" class="active">Riwayat</a>
             <a href="kontak.html">Kontak</a>
@@ -185,7 +185,7 @@
             </div>
         </div>
 
-        <button onclick="location.href='tampilanawal.html'">Lacak Paket Baru</button>
+        <button onclick="location.href='index.html'">Lacak Paket Baru</button>
     </div>
 
     <script>
