--- a/statuspaket.html
+++ b/statuspaket.html
@@ -142,7 +142,7 @@
         </header>
 
         <div class="navbar">
-            <a href="tampilanawal.html">Beranda</a>
+            <a href="index.html">Beranda</a>
             <a href="statuspaket.html" class="active">Status</a>
             <a href="riwayat.html">Riwayat</a>
             <a href="kontak.html">Kontak</a>
