--- a/faq.html
+++ b/faq.html
@@ -131,9 +131,9 @@
         
         <div class="nav">
             <a href="index.html" class="nav-item">Beranda</a>
-            <a href="#" class="nav-item">Status</a>
-            <a href="#" class="nav-item">Riwayat</a>
-            <a href="#" class="nav-item">Kontak</a>
+            <a href="statuspaket.html" class="nav-item">Status</a>
+            <a href="riwayat.html" class="nav-item">Riwayat</a>
+            <a href="kontak.html" class="nav-item">Kontak</a>
             <a href="faq.html" class="nav-item" style="background-color: #1557b0;">FAQ</a>
         </div>
         
