--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </header>
 
         <div class="navbar">
-            <a href="tampilanawal.html" class="active">Beranda</a>
+            <a href="index.html" class="active">Beranda</a>
             <a href="statuspaket.html">Status</a>
             <a href="riwayat.html">Riwayat</a>
             <a href="kontak.html">Kontak</a>
