--- a/faq.html
+++ b/faq.html
@@ -129,12 +129,12 @@
         <h1>Sistem Pelacakan Paket</h1>
         <p class="subtitle">Masukkan nomor resi untuk melacak status pengiriman paket Anda</p>
         
-        <div class="nav">
-            <a href="index.html" class="nav-item">Beranda</a>
-            <a href="statuspaket.html" class="nav-item">Status</a>
-            <a href="riwayat.html" class="nav-item">Riwayat</a>
-            <a href="kontak.html" class="nav-item">Kontak</a>
-            <a href="faq.html" class="nav-item" style="background-color: #1557b0;">FAQ</a>
+        <div class="navbar">
+            <a href="index.html" class="active">Beranda</a>
+            <a href="statuspaket.html">Status</a>
+            <a href="riwayat.html">Riwayat</a>
+            <a href="kontak.html">Kontak</a>
+            <a href="faq.html">FAQ</a>
         </div>
         
         <h2>Pertanyaan yang Sering Diajukan</h2>
